test: more integration tests
